# chronicle-mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md  USER_GUIDE.md  cliff.toml  pyproject.toml  server.py
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_binaries.yml  build_container.yml  ci.yml  create_release.yml  integration_test.yml  release.yml  security_scan.yml  update-homebrew-formula.yml
Formula/: chronicle-mcp.rb
chronicle_mcp/: __init__.py  __main__.py  cache.py  cli.py  config.py  connection.py  database.py  paths.py  server.py  server_http.py  webhooks.py
chronicle_mcp/core/: __init__.py  exceptions.py  formatters.py  services.py  validation.py
chronicle_mcp/protocols/: __init__.py  http.py  mcp.py
dev/bench/: data.js
docs/: ADVANCED_SEARCH.md  AGENTS.md  API.md  ARCHITECTURE.md  BROWSER_SUPPORT.md  CLI.md  INSTALL.md  SECURITY_HARDENING.md  USER_GUIDE.md
tests/: conftest.py  test_cli.py  test_connection.py  test_database.py  test_edge_cases.py  test_integration.py  test_paths.py  test_performance.py  test_properties.py  test_security.py  test_server.py  test_server_http.py
tests/benchmark/: test_performance.py
tests/integration/: test_browser.py
tests/unit/core/: test_formatters.py  test_services.py  test_validation.py
tests/unit/infrastructure/: test_cli.py  test_database.py  test_paths.py
tests/unit/protocols/: test_http.py  test_mcp.py
