[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronicle-mcp"
version = "1.2.13"
description = "MCP server for secure local browser history access"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Nikolas Iliopoulos", email = "iliopoulos.info@gmail.com"}
]
keywords = ["mcp", "browser", "history", "anthropic", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=0.2.0",
    "click>=8.0.0",
    "httpx>=0.25.0",
    "uvicorn>=0.25.0",
    "starlette>=0.35.0",
    "cachetools>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-cachetools",
    "pre-commit>=3.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "safety>=2.0.0",
    "deptry>=0.10.0",
    "pip-audit>=2.0.0",
    "shellcheck-py>=0.9.0",
]
config = ["tomli>=2.0.0"]

[project.scripts]
chronicle-mcp = "chronicle_mcp.cli:cli"

[project.urls]
Homepage = "https://github.com/nikolasil/chronicle-mcp"
Repository = "https://github.com/nikolasil/chronicle-mcp"
Issues = "https://github.com/nikolasil/chronicle-mcp/issues"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "Formula"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests",
]

[tool.pytest-cov]
fail_under = 85
show_missing = true
coverage = ["chronicle_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mcp.*", "cachetools.*"]
ignore_errors = true

[tool.deptry]
pep621_dev_dependency_groups = ["dev"]

ignore = [
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "hypothesis",
    "ruff",
    "mypy",
    "types-cachetools",
    "pre-commit",
    "build",
    "twine",
    "safety",
    "deptry",
    "pip-audit",
    "shellcheck-py",
]
